# mega_blastoise

./: .dockerignore  .gitignore  .gitmodules  .probe-rs.toml  Cargo.toml  DESIGN.md  Dockerfile  ELECTRONICS.md  GEN1_SPEC.md  Makefile  README.md  RESUME.md  TECHNICAL.md  build.rs  claude.md  commands.sh  debug.md  hwlogin.sh  specs.md  todo.md
.claude/commands/: fwdebug.md
.github/workflows/: pages.yml
Mega Blastoise PCB/: Mega Blastoise.kicad_pcb  Mega Blastoise.kicad_prl  Mega Blastoise.kicad_pro  fp-info-cache  freerouting.dsn  temp-freerouting.dsn  ~Mega Blastoise.kicad_pro.lck
Mega Blastoise PCB/_restore_backup_2026-07-05T16-02-20-889/: Mega Blastoise.kicad_pcb  Mega Blastoise.kicad_prl  Mega Blastoise.kicad_pro  Mega Blastoise.kicad_sch
architecture/: 01-system-overview.md  02-core-battle-flow.md  03-firmware-runtime.md  04-host-runtime.md  05-events-and-input.md  06-memory-and-debugging.md  07-design-principles.md  08-feature-map.md  README.md
cad/: .gitignore  DESIGN.md  METHODOLOGY.md  PARTS.md  board.scad  bottom-tub.stl  top-faceplate.stl
cad/stl/: dual-oled-128x64-faceplate.stl  dual-oled-128x64-tub.stl  nintendo-style-faceplate.stl  nintendo-style-tub.stl  single-st7789-faceplate.stl  single-st7789-nfc-faceplate-q4.stl  single-st7789-nfc-faceplate.stl  single-st7789-nfc-tub-q4.stl  single-st7789-nfc-tub.stl  single-st7789-tub.stl
cad/variants/: README.md  dual-oled-128x64.scad  single-st7789-nfc.scad  single-st7789.scad
docs/: build.md  hardware.md
esp32_reset/: Cargo.toml  README.md  reset.sh  rust-toolchain.toml
esp32_reset/.cargo/: config.toml
esp32_reset/src/: main.rs
gen1_battle/: Cargo.toml  build.rs
gen1_battle/data/: gen_rby_data.py  rby_moves.json  rby_species.json
gen1_battle/src/: battle.rs  combat.rs  data.rs  dispatch.rs  lib.rs  log.rs  options.rs  request.rs  rng.rs  state.rs  tables.rs  types.rs
gen1_battle/tests/: engine.rs  flow.rs  quirks.rs  recharge.rs  transform.rs
hardware/stripboard/: BUILD.md  README.md  gen_build_doc.py  gen_matrix_diy.py  gen_matrix_full_diy.py  gen_single_board.py  mega_blastoise_matrix.diy  mega_blastoise_matrix_full.diy  mega_blastoise_single_board.diy  preview_both.py  preview_copper.py  preview_full.py  preview_single.py  preview_strip.py  verify_matrix.py
mega_blastoise_core/: Cargo.toml  build.rs
mega_blastoise_core/src/: battle_effects.rs  battle_input.rs  battle_runner.rs  board_event.rs  choice_collect.rs  cli_parse.rs  data_store.rs  demo_teams.rs  display.rs  hp_bar.rs  lib.rs  move_descs.rs  move_sprites.rs  oled_ctl.rs  prompt_fmt.rs  qr.rs  randbat.rs  random_ai.rs  rng.rs  sprites.rs
mega_blastoise_core/tests/: qr_render.rs  sprite_lookup.rs
mega_blastoise_fw/: Cargo.toml  INTERACTIONS.md  build.rs  memory.x
mega_blastoise_fw/.cargo/: config.toml
mega_blastoise_fw/src/: battle_controller.rs  battle_effects.rs  board_effects.rs  hp_bar.rs  hw_object.rs  lib.rs  lobby.rs  main.rs  mem_profile.rs  pico_battle_input.rs  pn532.rs  usb_cdc_line.rs  usb_input.rs
mega_blastoise_fw/src/subsystems/: buzzer.rs  led.rs  mod.rs  nfc.rs  oled.rs  sh1106.rs  usb.rs
mega_blastoise_test/: Cargo.toml
mega_blastoise_test/src/: board_game_effects.rs  cli_display.rs  harness.rs  host_battle_controller.rs  host_battle_effects.rs  host_buzzer.rs  host_hp_bar.rs  host_hw_object.rs  host_led.rs  host_oled.rs  lib.rs  main.rs  stdin_input.rs  turn_timing.rs
mega_blastoise_test/tests/: board_events_and_queue.rs  cli_parsing.rs  demo_battle_smoke.rs  host_device_stubs.rs  scripted_effects.rs  stall_probe.rs
mega_blastoise_web/: Cargo.toml  build.rs
mega_blastoise_web/src/: lib.rs  web_controller.rs  web_display.rs  web_effects.rs
mega_blastoise_web/www/: app.js  index.html  style.css
patches/once_cell/: Cargo.toml
patches/once_cell/src/: lib.rs
pcb/: README.md  ato.yaml
pcb/elec/src/: mega_blastoise.ato
scripts/: fw-build.sh  gen_move_sprites.py  hw-shell.sh  mb-console.py  oled_render.py  web-dev.sh
src/: main.rs
