[package]
name = "mega-blastoise"
version = "0.1.0"
edition = "2021"

[dependencies]
# RP2040 async runtime + HAL
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.3", features = ["defmt", "critical-section-impl", "rp2040"] }

# Cortex-M core
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Logging over RTT (viewed with probe-rs or OpenOCD)
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Heap allocator — battler needs alloc
embedded-alloc = "0.5"

# Battle engine — local checkout, std disabled
battler = { path = "../battler/battler", default-features = false }
battler-data = { path = "../battler/battler-data", default-features = false }

# JSON deserialization of embedded data at startup
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = { version = "1.0", default-features = false }
hashbrown = { version = "0.17", features = ["serde"] }

[patch.crates-io]
once_cell = { path = "patches/once_cell" }

[build-dependencies]
serde_json = "1.0"

[profile.dev]
opt-level = "z"
lto = true
debug = 2
codegen-units = 1

[profile.release]
opt-level = "z"
lto = true
debug = 2
codegen-units = 1
