[workspace]
resolver = "2"
members = [
    "gen1_battle",
    "mega_blastoise_core",
    "mega_blastoise_fw",
    "mega_blastoise_test",
]
exclude = ["battler", "esp32_reset"]
default-members = [
    "mega_blastoise_core",
    "mega_blastoise_test",
]

[patch.crates-io]
once_cell = { path = "patches/once_cell" }

[profile.dev]
opt-level = "z"
lto = true
debug = 2
codegen-units = 1

[profile.release]
opt-level = "z"
lto = true
debug = 2
codegen-units = 1
