[package]
name = "mega-blastoise-core"
version = "0.1.0"
edition = "2021"

[dependencies]
battler = { path = "../../battler/battler", default-features = false }
battler-data = { path = "../../battler/battler-data", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = { version = "1.0", default-features = false }
embassy-sync = { version = "0.7", default-features = false }
embassy-futures = "0.1"
defmt = { version = "1.0", optional = true }

[features]
default = []
defmt = ["dep:defmt"]

[build-dependencies]
serde_json = "1.0"
