[package]
name = "mega-blastoise-core"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = { version = "0.8", default-features = false }
battler = { path = "../battler/battler", default-features = false, features = [] }
battler-data = { path = "../battler/battler-data", default-features = false }
gen1_battle = { path = "../gen1_battle" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
anyhow = { version = "1.0", default-features = false }
ciborium = { version = "0.2", default-features = false }
embassy-sync = { version = "0.7", default-features = false }
embassy-futures = "0.1"
defmt = { version = "1.0", optional = true }
embassy-time = { version = "0.5", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
timing = ["dep:embassy-time", "defmt"]
trace = ["defmt"]

[build-dependencies]
serde_json = "1.0"
ciborium = "0.2"
ureq = "2"
png = "0.17"
