[package]
name = "mega-blastoise-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"
rp-pico = "0.9.0"

# --- embassy (commented out during RTT bringup) ---
# mega-blastoise-core = { path = "../mega_blastoise_core" }
# embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "defmt"] }
# embassy-rp = { version = "0.3", features = ["defmt", "critical-section-impl", "rp2040", "time-driver"] }
# embassy-time = { version = "0.4", features = ["defmt"] }
# embedded-hal-async = "1"
# embedded-alloc = "0.5"
# battler = { path = "../../battler/battler", default-features = false }
# battler-data = { path = "../../battler/battler-data", default-features = false }
# anyhow = { version = "1.0", default-features = false }
