[package]
name = "mega-blastoise-fw"
version = "0.1.0"
edition = "2021"
default-run = "mega-blastoise-fw"

[dependencies]
mega-blastoise-core = { path = "../mega_blastoise_core", features = ["defmt"] }

# Cortex-M core
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Logging + bidirectional RTT (rtt-target 0.6 provides defmt global logger + down channel RX)
defmt = "1.0"
rtt-target = { version = "0.6", features = ["defmt"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }

# RP2040 async runtime + HAL
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.8", features = ["defmt", "critical-section-impl", "rp2040", "time-driver"] }
embassy-time = { version = "0.5", features = ["defmt"] }
embedded-hal-async = "1"

# Heap allocator
embedded-alloc = "0.5"

# battler types for MonData, TeamData, etc.
battler = { path = "../battler/battler", default-features = false }
battler-data = { path = "../battler/battler-data", default-features = false }
anyhow = { version = "1.0", default-features = false }
embassy-usb = { version = "0.6", features = ["defmt"] }
embassy-futures = "0.1"

[features]
default = ["usb", "nfc", "mem-profile"]
usb = []
nfc = []
mem-profile = []
