[package]
name = "mega-blastoise-fw"
version = "0.1.0"
edition = "2021"
default-run = "mega-blastoise-fw"

[dependencies]
mega-blastoise-core = { path = "../mega_blastoise_core", features = ["defmt", "timing"] }

# Cortex-M core
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Logging + bidirectional RTT (rtt-target 0.6 provides defmt global logger + down channel RX)
defmt = "1.0"
rtt-target = { version = "0.6", features = ["defmt"] }

# RP2040 async runtime + HAL
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.8", features = ["defmt", "critical-section-impl", "rp2040", "time-driver"] }
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-sync = "0.6"
embedded-hal-async = "1"

# Heap allocator
embedded-alloc = "0.5"

# battler types for MonData, TeamData, etc.
battler = { path = "../battler/battler", default-features = false, features = ["timing"] }
battler-data = { path = "../battler/battler-data", default-features = false }
anyhow = { version = "1.0", default-features = false }
embassy-usb = { version = "0.6", features = ["defmt"] }
embassy-futures = "0.1"

# OLED displays
ssd1306 = { version = "0.10", features = ["async"], optional = true }
embedded-graphics = { version = "0.8", optional = true }
display-interface = { version = "0.5", optional = true }

# NeoPixel LEDs
smart-leds = { version = "0.4", optional = true }
[features]
default = ["usb", "oled", "buzzer", "mem-profile"]
usb = []
oled = ["dep:ssd1306", "dep:embedded-graphics", "dep:display-interface"]
buzzer = []
leds = ["dep:smart-leds"]
mem-profile = []
