[package]
name = "mega-blastoise-test"
version = "0.1.0"
edition = "2021"
default-run = "mega-blastoise-test"

[dependencies]
embedded-graphics = "0.8"
mega-blastoise-core = { path = "../mega_blastoise_core" }
battler = { path = "../battler/battler" }
battler-data = { path = "../battler/battler-data" }
gen1_battle = { path = "../gen1_battle" }
anyhow = "1.0"
pollster = "0.3"
embassy-futures = "0.1"

# fw_test binary only
serialport = "4"
